# BASIC

./: .gitignore  CMakeLists.txt  README.md  makefile  release.sh  valgrind.sh
Docs/: Editor.md  Funktionstabellen.md  TODO.md  Tokenzation.md  Variable_handling.md  execution.md  lib.md
archive/: variable_handling.cpp  varianle_handling.h
include/: b_var.h  editing_window.h  executor.h  funk_var.h  funktions_dic.h  funktionstable.h  string_lib.h  tokenizer.h  tokenizer.h~  variable_handling.h
src/: b_var.cpp  b_var.h  funk_var.cpp  funk_var.h  funktionstable.h  main.cpp  statment_table.cpp  variable_handling.cpp  varianle_handling.h
src/editor/: editing_window.cpp  editing_window.h  tokenizer.cpp  tokenizer.h
src/execution/: executor.cpp  executor.h
src/funktions/: funk_var.cpp  funk_var.h  funktions_dic.cpp  funktions_dic.h  funktionstable.cpp  funktionstable.h
src/lib/: string_lib.cpp  string_lib.h
src/variables/: b_var.cpp  b_var.h  variable_handling.cpp  variable_handling.h
