cmake_minimum_required(VERSION 3.0.0)
project(defMethod VERSION 0.1.0)

add_executable(BASIC ./src/main.cpp ./src/variables/variable_handling.cpp ./src/variables/b_var.cpp ./src/funktions/funk_var.cpp ./src/funktions/funktionstable.cpp ./src/funktions/funktions_dic.cpp ./src/editor/editing_window.cpp ./src/editor/tokenizer.cpp )
